[package]
name = "helloworld_kernel"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader="0.9"
volatile="0.2.6"
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.8"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false